# OceanRays

./: LICENSE  OceanRays.py  README.md  RayTracing.ipynb  TTtable.pkl  pyproject.toml  setup.py  testing.ipynb
CTD_examples/: Munk_TTtable.pkl  SKQ202409S_009avg_SSP_Mackenzie.csv  SKQ_009_TTtable.pkl  skq202409s_009avg.cnv
notebooks/: Ttimes.ipynb
src/OceanRays/: RayPaths.py  SoundSpeed.py  TravelTimes.py  backup-everything.py
tests/: BuildSoundSpeed.ipynb  README.md  RayTracing.ipynb  TTtable.pkl  Ttimes.ipynb
tests/old/: slowness.ipynb
